# VoigtFit

./: .gitignore  .input.pars.swp  .readthedocs.yaml  .readthedocs.yml  AUTHORS.rst  Asplund.py  HI_input.pars  LICENSE  MANIFEST.in  README  README.md  README.rst  VoigtFit.py  VoigtFit_example.py  VoigtFit_syn_example.py  __init__.py  dataset.py  example_fit.dataset.hdf5  hdf5_save.py  input.pars  line_complexes.py  output.py  pack_module.sh  parse_input.py  prep_dist  pyproject.toml  pytest.ini  regions.py  requirements.txt  setup.cfg  setup.py  synthetic.dataset.hdf5  terminal_attributes.py  test_dataset.cont  test_dataset.dataset  test_dataset.fit  test_dataset.hdf5  voigt.py
VoigtFit/: Asplund.py  VERSION  VoigtFit.py  __init__.py  __main__.py  components.py  dataset.py  fits_input.py  hdf5_save.py  limits.py  line_complexes.py  lines.py  main.py  molecules.py  output.py  parse_input.py  regions.py  voigt.py
VoigtFit3/: VoigtFit.py  VoigtFit_example.py  __init__.py  dataset.py  line_complexes.py  molecules.py  output.py  parse_input.py  regions.py  voigt.py
doc/: test_input_comp.pars  test_input_mask.pars  test_input_noint.pars  test_input_norm.pars  voigtfit_overview.txt
docs/: .readthedocs.yml  Makefile  api.rst  conf.py  documentation.rst  index.rst  install.rst  physical_model_results.rst  requirements.txt  voigtfit_logo.rst
scripts/: VoigtFit_example.py  make_synthetic_data.py  physical_model.py  physical_model_results.rst  thermal_model_2comp.input
test_data/: VoigtFit_example.py  test.pars  test_UVB_1d.spec  test_input_comp.pars  test_input_mask.pars  (+3 more)
(+80 files in other folders)
